kubernetes/base/apps/self-hosted/homebox/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  labels:
    app: homebox
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homebox
  template:
    metadata:
      labels:
        app: homebox
    spec:
      securityContext:
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
      containers:
        - name: homebox
          image: ghcr.io/sysadminsmedia/homebox:0.25.0-rootless
          ports:
            - name: http
              containerPort: 7745
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: homebox
