kubernetes/base/apps/self-hosted/homebox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homebox
spec:
  selector:
    app: homebox
  ports:
    - protocol: TCP
      port: 7745
      targetPort: http
